# Uugu

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
module/: module.prop
src/: libng.cpp  logo.h  main.cpp  oxorany.h  utils.h  zygisk.hpp
src/imgui/: imgui_internal.h  imgui_settings.h
src/imgui/backends/: imgui_impl_android.cpp
